site.css
* {
    box-sizing: border-box;
}

html {
    font-family: sans-serif;
    font-size: 16px;
    background-image: url("https://static.scientificamerican.com/sciam/cache/file/077B65B4-9936-4C58-B1F856F562F98259_source.jpg");
}

header {
    font-size: 32px;
    position: fixed;
    left: 0;
    right: 0;
    padding: 20px 50px;
    box-shadow: 5px 2px 2px -5px black;
    background: #979dac;
    max-height: fit-content;
}

body {
    background-color: #bee9e8;
    max-width: 1000px;
    margin: 0 auto;
}

main {
    padding: 64px 24px 96px;
    box-shadow: 0 0 12px -2px black;
    color: #1b4965;
    font-family: 'Lucida Sans', sans-serif;
    min-height: 100vh;
}

.name {
    float: left;
}

.directory {
    float: right;
}

.directory a:hover {
    animation-name: color-cycle;
    animation-duration: 5s;
    animation-iteration-count: infinite;
  }
  
  @keyframes color-cycle {
    0% { color: red; }
    25% { color: green; }
    50% { color: blue; }
    75% { color: yellow; }
    100% { color: purple; }
}

.directory a {
    text-decoration: none;
    color: inherit;
    margin-left: 5px;
}

@media screen and (max-width: 1020px) {
    header {
        font-size: 24px;
        padding: 10px 25px;
    }
}

.active {
    border: 2px solid black;
}

.about-images {
    width: 200px;
    height: 150px;
    margin-left: 39%;
}

.splits {
    height: 8px;
    border: 3px solid black;
    padding: auto;
}

.portfolio-tile {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding-top: 25px;
}

.portfolio-tile img {
    max-width: 50%;
    height: auto;
}

form {
    display: grid;
    grid-template-columns: 1fr;
    grid-template-rows: repeat(3, 50px) 120px;
    gap: 5px;
    justify-content: center;
    align-items: center;
    max-width: 600px;
    margin: auto;
    padding-top: 80px;
    padding-bottom: 40px;
}

.form-name, .email, .message, .name-input, .email-input {
  font-size: 1.2rem;
}

.message-input {
  font-size: 1.2rem;
  resize: vertical;
}

button[type="submit"] {
  padding: 10px;
  font-size: 24px;
  background-color: #979dac;
  color: white;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

@media screen and (max-width: 768px) {
    button {
      width: 50%;
      justify-self: center;
    }

    main, form {
        padding-top: 100px;
    }
}

button[type="submit"]:hover {
  background-color: #1b4965;
}

label {
  display: block;
}

input[type="text"], input[type="email"], textarea {
  width: 100%;
  border: 2px solid black;
  min-height: fit-content;
  min-width: fit-content;
}

footer {
    text-align: center;
    background: #979dac;
}

footer a {
    margin-left: 10px;
}

